<resources>
    <string name="app_name">TuSuper</string>
    <string name="cabeceraSuper">SUPERMERCADO PABLO</string>
    <string name="switchTodo" translatable="false">Todos</string>
    <string name="switchDisponible">Disponibles</string>
    <string name="btnCatalogo" translatable="false">Catálogo</string>
    <string name="btnCesta" translatable="false">Cesta</string>
    <string name="euro" translatable="false">€</string>
    <string name="txtBtnAñadir">Añadir al carrito</string>
    <string name="unidadesRestantes" translatable="false">Ud. restantes</string>
    <string name="btnQuitar" translatable="false">Eliminar</string>
    <string name="cestaVacia">La cesta está vacía</string>
    <string name="txtEliminar">eliminado correctamente de la cesta</string>
    <string name="txtNoHay">No hay</string>
    <string name="txtAgregadoCorrecto">añadido correctamente a la cesta</string>
    <string name="errorIndice" translatable="false">Error al acceder al índice del producto en el catálogo</string>
    <string name="tagLogs" translatable="false">LOGS</string>
    <string name="errorVacia" translatable="false">La lista de productos está vacía o es nula</string>
    <string name="errorRecyclerView" translatable="false">Error al cargar el RecyclerView del catálogo</string>
</resources>